# CLI_calculator

./: .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  MakeFile  README.md  py_calculator.cp312-win_amd64.pyd  requirements.txt  setup.py  usage.py
.github/workflows/: build.yml
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  py_calculator.exp  py_calculator.lib  py_calculator.pyd
calc/: calculator.c  calculator.h  test_calculator.c
cmake/: IncludeList.cmake
docs/: Makefile
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
py_calculator.egg-info/: PKG-INFO  SOURCES.txt
python_bindings/: py_calculator.c
src/: main.c
tests/: test_py_calculator.py
